# khadee_EDA

./: .gitignore  LEARNING_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
k_eda/: __init__.py  clean.py  config.py  loader.py  type_detector.py  utils.py
k_eda/assets/: script.js  style.css
k_eda/engines/: __init__.py  correlation_engine.py  dim_reduction.py  missing_engine.py  outlier_engine.py  stats_engine.py
k_eda/renderers/: __init__.py  chart_renderer.py  html_renderer.py  table_renderer.py
k_eda/sections/: __init__.py  advanced_stats.py  correlations.py  distributions.py  feature_engineering.py  interactions.py  missing.py  model_readiness.py  model_suggestion.py  outliers.py  overview.py  sample.py  variables.py
k_eda/techniques/: __init__.py  china.py  india.py  japan.py  us.py
khadee_eda/: __init__.py  clean.py  config.py  loader.py  type_detector.py  utils.py
khadee_eda/assets/: script.js  style.css
khadee_eda/engines/: __init__.py  correlation_engine.py  dim_reduction.py  missing_engine.py  outlier_engine.py  stats_engine.py
khadee_eda/renderers/: __init__.py  chart_renderer.py  html_renderer.py  table_renderer.py
khadee_eda/sections/: __init__.py  advanced_stats.py  correlations.py  distributions.py  interactions.py  missing.py  model_readiness.py  model_suggestion.py  outliers.py  overview.py  sample.py  variables.py
khadee_eda/techniques/: __init__.py  china.py  india.py  japan.py  us.py
