[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khadee-eda"
version = "1.0.3"
description = "Deep Insights EDA — Comprehensive data profiling with global AI techniques"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["khadee_eda*"]
