[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-eda"
version = "1.0.6"
description = "Deep Insights EDA — Comprehensive data profiling with global AI techniques"
readme = "README.md"
license = {text = "Proprietary / All Rights Reserved"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["k_eda*"]
